...
        android:paddingBottom="8dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/sign_up"
...
